--- a/programs/cross_chain_oracle/Cargo.toml
+++ b/programs/cross_chain_oracle/Cargo.toml
@@ -2,11 +2,20 @@
 name = "cross_chain_oracle"
 version = "0.1.0"
 description = "Created with Anchor"
+edition = "2018"
+overflow-checks = true
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
+
+[features]
+no-entrypoint = []
+no-idl = []
+no-log-ix-name = []
+cpi = ["no-entrypoint"]
+default = []
 
 [dependencies]
-anchor-cli = "0.30.0"
+anchor-lang = "0.30.0"
 solana-program = "1.8.0"
-sha2 = "0.10.8"
+sha2 = "0.9"
